<resources>
    <string name="app_name">ObjectiveExam</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="newUser">New user \?</string>
    <string name="signUp">Sign up</string>
    <string name="forgotYourPassword">Forgot your password \?</string>
    <string name="recover">Recover</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="alreadyHaveAnAccount">Already have an account \?</string>
    <string name="loginSuccessful">Login successful</string>
    <string name="requiredPermission">Required Permission</string>
    <string name="requiredPermissionAllow">This app required given permission please allow.</string>
    <string name="youHaveDeniedPermission">You have denied some permission.</string>
    <string name="pleaseAllowPermission"><![CDATA[Please allow all permission at settings > permissions.]]></string>
    <string name="goToSetting">Go to setting</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="noInternetConnection">No internet connection</string>
    <string name="plsConnectToInternet">Please connect to internet.</string>
    <string name="serverError">Server Error</string>
    <string name="tokenExpire">Token expire</string>
    <string name="incorrectUsernamePassword">Incorrect username and password</string>
    <string name="loading">Loading</string>
    <string name="plsEnterCorrectUsernamePassword">Please enter correct username and password.</string>
    <string name="thisFieldCannotBlank">This field cannot be blank</string>
    <string name="firstName">First Name</string>
    <string name="middleName">Middle Name</string>
    <string name="lastName">Last Name</string>
    <string name="mobileno">Mobile Number</string>
    <string name="motherName">Mother Name</string>
    <string name="startExam">START EXAM</string>
    <string name="stopExam">STOP EXAM</string>
    <string name="plsEnterFirstName">Please enter first name.</string>
    <string name="plsEnterMiddleName">Please enter middle name.</string>
    <string name="plsEnterLastName">Please enter last name.</string>
    <string name="plsSelectGender">Please select gender.</string>
    <string name="plsEnterMobNo">Please enter mobile no.</string>
    <string name="validMailid">Please enter valid email id.</string>
    <string name="plsEnterMotherName">Please enter mother name.</string>
    <string name="address">Address</string>
    <string name="regSuccess">Registration Successfull..."\n"Your password has been send to your registered Email Address</string>
    <string name="registeredSuccessfully">Registered Successfully.</string>
    <string name="failedTryAgain">Failed try again.</string>
    <string name="plsEnterAddress">Please enter address</string>
    <string name="selCountry">Select Country</string>
    <string name="selState">Select state</string>
    <string name="plsSelectState">Please select state</string>
    <string name="selDistrict">Select district</string>
    <string name="plsSelectDistrict">Please select district</string>
    <string name="pleaseEnterRegisteredEmailAddress">Please enter the registered email address.</string>
    <string name="send">Send</string>
    <string name="backtoLogin">Back to login</string>
    <string name="enteredEmailNotExist">Sorry...! Entered Email Address Is Not Exist."\n"Please enter registered email address.</string>
    <string name="passSendSuccess">Your password has been send to your registered Email Address.</string>
    <string name="emailnotAvailable">Email not available</string>
    <string name="notRegister">Not Registered !</string>
    <string name="plsRegiFirst">Please register first.</string>
    <string name="importStudent">Import student</string>
    <string name="scheduleExam">Schedule Exam</string>
    <string name="generateSitNo">Generate Seat Number</string>
    <string name="importQuePaperAns"><![CDATA[Import question paper & answer]]></string>
    <string name="generateQueSet">Generate question set</string>
    <string name="approveReject"><![CDATA[Approve & reject]]></string>
    <string name="openNavDrawer">Open navigation drawer</string>
    <string name="closeNavDrawer">Closer navigation drawer</string>
    <string name="myExam">My exam</string>
    <string name="downloadHallTicket">Download Hall Ticket</string>
    <string name="logout">Logout</string>
    <string name="logoutQue">Logout ?</string>
    <string name="doYouWantLogout">Do you want to logout ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plsEnterValidMobNo">Please enter valid mobile number</string>
    <string name="dashboard">Dashboard</string>
    <string name="myprofile">My Profile</string>
    <string name="userReg">User Registration</string>
    <string name="course">Course</string>
    <string name="assignCourse">Assign Course</string>
    <string name="students">Students</string>
    <string name="quesetGen">Question Set Generation</string>
    <string name="queAllocation">Question Allocation</string>
    <string name="applyForCourse">Apply For Course</string>
    <string name="prevYearQuq">Previous Year Question</string>
    <string name="onlineExam">Online Exam</string>
    <string name="studentCount">Student Count</string>
    <string name="teacherCount">Teacher Count</string>
    <string name="examController">Exam Controller</string>
    <string name="notFound">Not found</string>
    <string name="orgNotFound">Organiztion not found</string>
    <string name="examControllerList">Exam controller list</string>
    <string name="regNewExamController">Register new exam controller</string>
    <string name="userName">User name</string>
    <string name="plsEnterSearch">Please enter search key</string>
    <string name="examControllerNotFound">Exam controller not found</string>
    <string name="regNewUser">Register new user</string>
    <string name="dob">Date of birth</string>
    <string name="selDob">Select date of birth</string>
    <string name="dateOfAdmission">Date of admission</string>
    <string name="selDateOfAdmission">Select date of admission</string>
    <string name="selBloodGrp">Select blood group</string>
    <string name="emergencyMobileno">Emergency mobile number</string>
    <string name="qualification">Qualification</string>
    <string name="india">India</string>
    <string name="selQualification">Select qualification</string>
    <string name="mobileNoColan">Mobile No :</string>
    <string name="emailIdColan">Email Id :</string>
    <string name="admissionDateColan">Admission Date:</string>
    <string name="activeInactive">Active/Inactive</string>
    <string name="bloodGroup">Blood Group</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="doYouWantChangeStatus">Do you want to change status ?</string>
    <string name="update">Update</string>
    <string name="updatedSuccessfully">Updated successfully</string>
    <string name="examControllerCount">Exam Controller Count</string>
    <string name="courseList">Course List</string>
    <string name="courseCode">Course Code</string>
    <string name="courseName">Course Name</string>
    <string name="courseDuration">Course Duration</string>
    <string name="courseFees">Course Fees</string>
    <string name="courseDescription">Course Description</string>
    <string name="plsEnterCourseCode">Please enter course code</string>
    <string name="plsEnterCourseName">Please enter course name</string>
    <string name="plsEnterCourseDesc">Please enter course description</string>
    <string name="plsEnterCourseDuration">Please enter course duration</string>
    <string name="plsEnterCourseFees">Please enter course fees</string>
    <string name="courseAddedSuccessfully">Course Added Successfully</string>
    <string name="addNewCourse">Add New Course</string>
    <string name="plsSelectBloodGrp">Please select blood group</string>
    <string name="addedSuccessfully">Added Successfully.</string>
    <string name="courseCodeAlreadyExist">Course code already exist.</string>
    <string name="courseNameAlreadyExist">Course name already exist.</string>
    <string name="scheduleExamList">Schedule Exam List</string>
    <string name="batch">Batch</string>
    <string name="noOfQuestions">Number of Questions</string>
    <string name="totalMarks">Total Marks</string>
    <string name="startDate">Start Date</string>
    <string name="day">Day</string>
    <string name="startTime">Start Time</string>
    <string name="endDate">End Date</string>
    <string name="endTime">End Time</string>
    <string name="selCourse">Select course</string>
    <string name="status">Status</string>
    <string name="dateOfExam">Date of Exam</string>
    <string name="sitNoGenerated">Seat number generated</string>
    <string name="plsContactAdminForIssue">Please Contact to Admin for Issue.</string>
    <string name="selOrganization">Select organization</string>
    <string name="selStartDate">Select start date</string>
    <string name="SelStartTime">Select start time</string>
    <string name="selEndTime">Select end time</string>
    <string name="alreadyExist">Already Exists</string>
    <string name="plsEnterNoOfQue">Please enter number of questions</string>
    <string name="editScheduleExam">Edit Schedule Exam</string>
    <string name="addScheduleExam">Add Schedule Exam</string>
    <string name="plsSelectOrganization">Please select organization</string>
    <string name="examControllerAlreadyExist">Exam Controller already exist.</string>
    <string name="deactivated">Deactivated</string>
    <string name="uRTemporarilyDeactivatedPlsContactAdmin">You are temporarily deactivated. Please contact admin for further infromation.</string>
    <string name="plsSelectQualification">Please select qualification</string>
    <string name="profileDetails">Profile Details</string>
    <string name="userAlreadyExist">User Already Exist</string>
    <string name="emailNotExist">Email not exist</string>
    <string name="plsEnterBatch">Please enter batch</string>
    <string name="plsEnterTotalMarks">Please enter total marks</string>
    <string name="plsEnterStartDate">Please enter start date</string>
    <string name="plsEnterNoOfDays">Please enter number of days</string>
    <string name="plsSelectStartTime">Please select start time</string>
    <string name="plsSelectEndTime">Please select end time</string>
    <string name="plsSelectCourse">Please select course</string>
    <string name="totalNoOfDay">Total number of Days</string>
    <string name="examControllerRegistration">Exam Controller Registration</string>
    <string name="editCourse">Edit Course</string>
    <string name="doYouWantToGenerateSitNoOf">Do you want to generate sit number of</string>
    <string name="generate">Generate</string>
    <string name="queSetGenerated">Question Set Generated</string>
    <string name="doYouWantToGenerateQueSet">Do you want to generate question set ?</string>
    <string name="doYouWantToApplyForThisCourse">Do you want to apply for this course !</string>
    <string name="apply">Apply</string>
    <string name="noDataFound">No data found.</string>
    <string name="totalRegStudentCount">Total Registered Students Count</string>
    <string name="coursewiseStudentData">Coursewise Student Data</string>
    <string name="regStudentsCount">Registered Students Count</string>
</resources>
