<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddScheduleExam">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:orientation="vertical">
        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/spn_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            app:ms_arrowColor="@color/text_color"
            app:ms_baseColor="@color/text_color"
            app:ms_errorColor="@color/red"
            app:ms_floatingLabelColor="@color/text_color"
            app:ms_floatingLabelText="@string/selCourse"
            app:ms_highlightColor="@color/text_color"
            app:ms_hint="@string/selCourse"
            android:tooltipText="@string/selCourse"
            app:ms_multiline="false" />
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/batch"
            android:textColor="#999999"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_batch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:inputType="number"
            android:maxLength="50"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noOfQuestions"
            android:textColor="#999999"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_no_of_que"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:inputType="number"
            android:maxLength="50"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalMarks"
            android:textColor="#999999"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_total_mark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:inputType="number"
            android:maxLength="5"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/startDate"-->
<!--            android:textColor="#999999"-->
<!--            android:textStyle="bold" />-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startDate"
            android:textColor="#999999"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/edt_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:hint="@string/selStartDate"
            android:maxLines="1"
            android:focusableInTouchMode="false"
            android:singleLine="true"

            android:textColor="@color/black"
            android:textStyle="bold" />
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalNoOfDay"
            android:textColor="#999999"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:inputType="number"
            android:maxLength="5"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startTime"
            android:textColor="#999999"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:focusableInTouchMode="false"
            android:maxLines="1"
            android:hint="@string/SelStartTime"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endTime"
            android:textColor="#999999"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/edt_end_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:maxLines="1"
            android:hint="@string/selEndTime"
            android:singleLine="true"
            android:textColor="@color/black"
            android:focusableInTouchMode="false"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />



        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:background="@drawable/rounded_corners"
            android:text="S U B M I T"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>